testdata/baselines/reference/submodule/conformance/moduleExportWithExportPropertyAssignment2.errors.txt
a.js(4,6): error TS2339: Property 'f' does not exist on type '1'.
mod1.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
mod1.js(3,16): error TS2339: Property 'f' does not exist on type '1'.


==== a.js (1 errors) ====
    /// <reference path='./requires.d.ts' />
    var mod1 = require('./mod1')
    mod1.toFixed(12)
    mod1.f() // error, 'f' is not a property on 'number'
         ~
!!! error TS2339: Property 'f' does not exist on type '1'.
    
==== requires.d.ts (0 errors) ====
    declare var module: { exports: any };
    declare function require(name: string): any;
==== mod1.js (2 errors) ====
    /// <reference path='./requires.d.ts' />
    module.exports = 1
    ~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.f = function () { }
                   ~
!!! error TS2339: Property 'f' does not exist on type '1'.
    